# fzur

./: .gitignore  LICENSE  PKGBUILD  README.md  arf.sh  aur-info.sh  aur-preview.sh  config.py  diff-preview.sh  fur.sh  fzur  fzur-info  fzur.sh  pkg-preview.sh  preview_pkgbuild.sh  pyproject.toml  resolve.py  review-preview.sh  ui.py
arf/: main.py
