[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "arf"
version = "0.1.0"
description = "An fzf Pacman wrapper and AUR helper."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "pyalpm",
    "requests",
    "srcinfo",
]

[project.scripts]
arf = "arf.main:main"
